After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758188 - dashdemux: illegal memory access in gst_mpd_client_get_last_fragment_timestamp_end
dashdemux: illegal memory access in gst_mpd_client_get_last_fragment_timestam...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-16 17:25 UTC by Florin Apostol
Modified: 2015-11-18 07:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
1/2 unit test to reproduce the problem (1.57 KB, patch)
2015-11-16 17:26 UTC, Florin Apostol
committed Details | Review
2/2 proposed fix (2.19 KB, patch)
2015-11-16 17:27 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-11-16 17:25:14 UTC
When trying to get the timestamp of the last fragment, the gst_mpd_client_get_last_fragment_timestamp_end function uses the stream->segments array. But this is not set if segment templates are used. The result is an illegal memory access into stream->segments array which is NULL.
Comment 1 Florin Apostol 2015-11-16 17:26:50 UTC
Created attachment 315695 [details] [review]
1/2 unit test to reproduce the problem
Comment 2 Florin Apostol 2015-11-16 17:27:23 UTC
Created attachment 315696 [details] [review]
2/2 proposed fix
Comment 3 Sebastian Dröge (slomo) 2015-11-18 07:51:46 UTC
commit fb2d3abca89b56808893a541f546d19a053b390a
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Mon Nov 16 17:25:34 2015 +0000

    dashdemux: fixed illegal memory access in gst_mpd_client_get_last_fragment_timestamp_end
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758188

commit b0950269454a9f7bee42d5d060c1a8b7bf03dff9
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Mon Nov 16 17:25:21 2015 +0000

    mpdparser: tests: added test for gst_mpd_client_get_last_fragment_timestamp_end
    
    The timestamp for last fragment is incorrectly retrieved if segment templates
    are used.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758188